backends/drm: release buffers for disabled objects

BUG: 456686