src/backends/drm/drm_object_plane.cpp
@@ -187,6 +187,7 @@ void DrmPlane::disable()
 {
     setPending(PropertyIndex::CrtcId, 0);
     setPending(PropertyIndex::FbId, 0);
+    m_next = nullptr;
 }
 
 void DrmPlane::releaseBuffers()
